# ift_big_data

./: .flake8  .gitignore  .lintr  CHANGELOG.md  README.md  docker-compose.yml
Scripts/Python/0_RandomTrades/: README.md  lob_simulation.py  main.py  pyproject.toml  rl_lob_execution.py
Scripts/Python/0_RandomTrades/modules/data_models/: trade_model.py
Scripts/Python/0_RandomTrades/modules/input/: db_connection.py
Scripts/Python/0_RandomTrades/modules/output/: avro_output.py  csv_output.py  parquet_output.py  write_output.py
Scripts/Python/0_RandomTrades/modules/trades/: RandomTradeGenerator.py
Scripts/Python/0_RandomTrades/modules/utils/: args_parser.py  info_logger.py
Scripts/Python/0_RandomTrades/properties/: conf.yaml
Scripts/Python/1_ETL_MongoDB/: .env.dev  README.md  main.py  pyproject.toml
Scripts/Python/1_ETL_MongoDB/modules/data_models/: trade_model.py
Scripts/Python/1_ETL_MongoDB/modules/db/: mongo_db.py  redis_manager.py
Scripts/Python/1_ETL_MongoDB/modules/input/: avro_input.py  read_file.py
Scripts/Python/1_ETL_MongoDB/modules/utils/: info_logger.py
Scripts/Python/1_ETL_MongoDB/tests/: test_pydantic_trade_model.py
Scripts/Python/2_ETL_Mongodb_SQL/: README.md  main.py  pyproject.toml
Scripts/Python/2_ETL_Mongodb_SQL/modules/db/: mongo_db.py  postgres_db.py  sql_conn.py  sqlite_db.py
Scripts/Python/2_ETL_Mongodb_SQL/modules/input/: read_file.py
Scripts/Python/2_ETL_Mongodb_SQL/modules/utils/: args_parser.py  info_logger.py
Scripts/Python/2_ETL_Mongodb_SQL/properties/: conf.yaml
Scripts/Python/3A_ETL_Duckdb_Minio/: .env.dev  README.md  main.py  pyproject.toml
Scripts/Python/3A_ETL_Duckdb_Minio/modules/: trades_aggregator.py
Scripts/Python/3A_ETL_Duckdb_Minio/modules/data_models/: port_position_model.py
Scripts/Python/3A_ETL_Duckdb_Minio/modules/db_ops/: __init__.py  duckdb_client.py  sql_conn.py
Scripts/Python/3A_ETL_Duckdb_Minio/modules/utils/: args_parser.py
Scripts/Python/3A_ETL_Duckdb_Minio/properties/: conf.yaml
Scripts/Python/3A_ETL_Duckdb_Minio/static/: RNDTRADE.py  file_load_logger.txt
Scripts/Python/3_ETL_Duckdb_Postgres/: README.md  main.py  pyproject.toml
Scripts/Python/3_ETL_Duckdb_Postgres/modules/: trades_aggregator.py
Scripts/Python/3_ETL_Duckdb_Postgres/modules/data_models/: port_position_model.py
Scripts/Python/3_ETL_Duckdb_Postgres/modules/db_ops/: sql_conn.py
Scripts/Python/3_ETL_Duckdb_Postgres/modules/input/: csv_input.py  parquet_input.py  read_file.py
Scripts/Python/3_ETL_Duckdb_Postgres/modules/utils/: args_parser.py  info_logger.py
Scripts/Python/3_ETL_Duckdb_Postgres/properties/: conf.yaml
Scripts/Python/4_Calibrate_Factors/: .env.dev  README.md  main.py  pyproject.toml
Scripts/Python/4_Calibrate_Factors/modules/data_models/: sector_params.py  static_model.py  table_equity_static.py
Scripts/Python/4_Calibrate_Factors/modules/db_ops/: extract_from_query.py  ift_sql.py  postgres_config.py  redis_client.py
Scripts/Python/4_Calibrate_Factors/modules/input_data/: get_input_company_static.py  get_input_market_cap.py  get_input_previous_close.py
Scripts/Python/4_Calibrate_Factors/modules/market_factors/: equity_var.py  market_cap_tilting.py  sector_calibration.py
Scripts/Python/4_Calibrate_Factors/modules/output_data/: load_redis_db.py
Scripts/Python/4_Calibrate_Factors/modules/utils/: __init__.py  args_parser.py  business_dates.py  local_logger.py
Scripts/Python/4_Calibrate_Factors/properties/: conf.yaml
Scripts/Python/5_Trades_Validate/: README.md  main.py  pyproject.toml
Scripts/Python/5_Trades_Validate/modules/analysis/: regression_analysis.py  test_normal_distribution.py
Scripts/Python/5_Trades_Validate/modules/data_models/: trade_model.py  trade_suspect.py
Scripts/Python/5_Trades_Validate/modules/db/: mongo_db.py  redis_manager.py
Scripts/Python/5_Trades_Validate/modules/input/: read_file.py
Scripts/Python/5_Trades_Validate/properties/: conf.yaml
Scripts/Python/5_Trades_Validate/static/: RNDTRADE.avsc
Scripts/Python/6_UI_Trades_App/: README.md  main.py  pyproject.toml
Scripts/Python/6_UI_Trades_App/modules/: auth.py  exception_abstraction.py  highcharts_templates.py  local_logger.py  middleware_helper.py  requests_abstraction.py
Scripts/Python/6_UI_Trades_App/properties/: conf.yaml
Scripts/Python/6_UI_Trades_App/templates/: headers.py  homepage.html  paift.html  scarp.html
Scripts/Python/6_UI_Trades_App/www/: styles.css
Scripts/Python/7_Trades_API/: .env.dev  README.md  main.py  pyproject.toml
Scripts/Python/7_Trades_API/app/: server.py
Scripts/Python/7_Trades_API/app/routes/: __init__.py  (+3 more)
Scripts/Python/7_Trades_API/properties/: conf.yaml
(+76 files in other folders)
