[tool.poetry]
name = "4-etl-mongodb-sql"
version = "0.1.0"
description = ""
authors = ["uceslc0"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
ift-global = {git = "https://github.com/iftucl/ift_global.git"}
sqlalchemy = "^2.0.38"
pymongo = "^4.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
