[tool.poetry]
name = "4-calibrate-factors"
version = "0.1.0"
description = ""
authors = ["uceslc0"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
scipy = "^1.15.2"
pymongo = "^4.11.1"
sqlalchemy = "^2.0.38"
sqlmodel = "^0.0.22"
numpy = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
